--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 </head>
 <body>
 
-    <div id="header"><p>Altilunium Darkhall - <span id="bid"></span> <a href="https://rtnf.prose.sh/altilunium_darkhall"><small>[about]</small></a>  </p></div>
+    <div id="header"><p>Altilunium Darkhall - <span id="bid"></span> <a href="https://rtnf.prose.sh/altilunium_darkhall" target="_blank"><small>[about]</small></a>  </p></div>
     <div id="messages" class="card-block"></div>
 
     <br>
