--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             console.log(chatLog[0])
 
             if (!identify) {
-                var c = "<i>" + uid + " is entering this room..</i>"
+                var c = "<small><i>" + uid + " is entering this room..</i></small>"
                 chatLog.push(c)
                 copy.put(JSON.stringify(chatLog))
                 identify = true
